--- a/src/Css/Sidebar.css
+++ b/src/Css/Sidebar.css
@@ -58,7 +58,7 @@ body {
 
 .sidebar .nav-link.active {
     background-color: rgb(183, 183, 183);
-    color: #00c2c9;
+    color: #ffffff;
     border-radius: 10px;
 }
 
