--- a/src/pages/Reports/Report.css
+++ b/src/pages/Reports/Report.css
@@ -3,9 +3,16 @@
     padding: 16px;
     margin: 16px;
     border-radius: 8px;
-    box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.1);
+    box-shadow: 20px 20px 20px rgba(0, 0, 0, 0.30);
 }
 
 .card h3 {
     margin-bottom: 8px;
+}
+
+.transaction_type{
+    background-color: #e9e9e9;
+    padding: 7px 15px 7px 15px;
+    border-radius: 6px;
+    color: black;
 }
